--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.5.0",
     "mongoose": "^6.4.4",
     "mysql2": "^2.3.3",
     "pg": "^8.7.3",
